static/css/index.css
body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

main {
  flex-grow: 1;
}

nav {
  margin-bottom: 1rem;
  background-color: #5F32AB;
  color: #f7f7f7;
}

nav img {
  display: inline-block;
  margin: 0 0 0 1rem;
}

nav ul {
  margin: 1rem 0.5rem;
  flex-grow: 1;
}

nav a {
  color: #f7f7f7;
}

footer {
  background-color: #5F32AB;
  color: #f7f7f7;
  max-width: 100vw;
  padding: 0 0 3rem 0;
  margin: 3rem 0 0 0;
  bottom: 0;
}

@media(prefers-color-scheme: dark) {
  footer {
    background-color: #2d213d;
  }
}

footer div {
  margin: 0 auto;
  padding: 0.5rem; 0;
  max-width: var(--width-content);
}

footer a {
  color: #f7f7f7;
}

:root {
  --color-link: #0E77CD;
}

